--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>blog</title><link href=/static/css/app.739f1ad65f043fab3efe7a450cd54da9.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.021315b3109328fb2b7d.js></script><script type=text/javascript src=/static/js/vendor.8744cb7ee52156360a9b.js></script><script type=text/javascript src=/static/js/app.c08eda74e632c57ca39a.js></script></body></html>
+<!DOCTYPE html><html><head><meta charset=utf-8><title>Blog</title><link rel=stylesheet href=//at.alicdn.com/t/font_470643_ec5o0i4ip07r2j4i.css><link rel=icon href=./spark.png type=image/x-icon><style type=text/css>.iconfont{
+      font-size:50px;
+    }
+    *{
+      font-family: "Times New Roman", Times, serif;
+    }</style><link href=/static/css/app.8340edae7c50ad3a5a8069cc050ecd3e.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.a01f6e39cbbf0eca5c04.js></script><script type=text/javascript src=/static/js/vendor.8de5f05b9cab26259d2d.js></script><script type=text/javascript src=/static/js/app.e0e2b50d50e1c01ee860.js></script></body></html>
