--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>Blog</title><link rel=stylesheet href=//at.alicdn.com/t/font_470643_ec5o0i4ip07r2j4i.css><link rel=icon href=./spark.png type=image/x-icon><style type=text/css>.iconfont{
-      font-size:50px;
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Blog</title><link rel=stylesheet href=//at.alicdn.com/t/font_470643_ec5o0i4ip07r2j4i.css><link rel=icon href=./spark.png type=image/x-icon><style type=text/css>.iconfont {
+      font-size: 50px;
     }
-    *{
-      font-family: "Times New Roman", Times, serif;
-    }</style><link href=/static/css/app.affa8619b43402f76f8240649b560884.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2a134309f6840e45eb44.js></script><script type=text/javascript src=/static/js/vendor.d6ea5880b13f0508f8eb.js></script><script type=text/javascript src=/static/js/app.4039cdaff76b0de4121a.js></script></body></html>
+
+    * {
+      font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
+    }</style><link href=/static/css/app.d2cb33db2f169f31e1481254ffd155e8.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.c813dc69fc0f3b15e825.js></script><script type=text/javascript src=/static/js/vendor.d6ea5880b13f0508f8eb.js></script><script type=text/javascript src=/static/js/app.2b4f3c6a8285414a4e82.js></script></body></html>
