--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Blog</title><link rel=stylesheet href=//at.alicdn.com/t/font_470643_2ue6hjjcmwoy9zfr.css><link rel=icon href=./spark.png type=image/x-icon><style type=text/css>.iconfont {
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Spark'house</title><link rel=stylesheet href=//at.alicdn.com/t/font_470643_2ue6hjjcmwoy9zfr.css><link rel="shortcut icon" href=./src/assets/test.ico type=image/x-icon><script src=http://cdn.hcharts.cn/highcharts/highcharts.js></script><script src=http://cdn.hcharts.cn/highcharts/modules/wordcloud.js></script><style type=text/css>.iconfont {
       font-size: 50px;
     }
 
     * {
       font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
-    }</style><link href=/static/css/app.eebf84adbca7facd5ca2aa7d64331d9d.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.f0ad5e95fb062e3458c1.js></script><script type=text/javascript src=/static/js/vendor.d6ea5880b13f0508f8eb.js></script><script type=text/javascript src=/static/js/app.5519784c63c9fbfc3c1b.js></script></body></html>
+    }</style><link href=/static/css/app.b6c0b4241c3b72ba9a96fea5e50670dc.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.1bbb23ee2b9a3a779859.js></script><script type=text/javascript src=/static/js/vendor.d6ea5880b13f0508f8eb.js></script><script type=text/javascript src=/static/js/app.ae8afc6332b8794f6444.js></script></body></html>
