--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Spark'house</title><link rel=stylesheet href=//at.alicdn.com/t/font_470643_2ue6hjjcmwoy9zfr.css><link rel="shortcut icon" href=./src/assets/test.ico type=image/x-icon><script src=http://cdn.hcharts.cn/highcharts/highcharts.js></script><script src=http://cdn.hcharts.cn/highcharts/modules/wordcloud.js></script><style type=text/css>.iconfont {
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Spark'house</title><link rel=stylesheet href=//at.alicdn.com/t/font_470643_2ue6hjjcmwoy9zfr.css><link rel="shortcut icon" href=./src/assets/test.ico type=image/x-icon><script src=https://cdn.bootcss.com/highcharts/6.0.3/highcharts.js></script><script src=https://cdn.bootcss.com/highcharts/6.0.3/js/modules/wordcloud.js></script><style type=text/css>.iconfont {
       font-size: 50px;
     }
 
     * {
       font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
-    }</style><link href=/static/css/app.97d3b4957f9f2b923bbc11976035dc81.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.08877e6efbb8f481591d.js></script><script type=text/javascript src=/static/js/vendor.d6ea5880b13f0508f8eb.js></script><script type=text/javascript src=/static/js/app.f6186422220f880a0199.js></script></body></html>
+    }</style><link href=/static/css/app.2adb3f2f6c8d1355fbf20aa684dc7ea9.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.a38bdfd42108bc9a312f.js></script><script type=text/javascript src=/static/js/vendor.d6ea5880b13f0508f8eb.js></script><script type=text/javascript src=/static/js/app.6eba94580f0b810150c9.js></script></body></html>
