--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Spark'house</title><link rel=stylesheet href=//at.alicdn.com/t/font_470643_dwolh54z36ktvs4i.css><link rel="shortcut icon" href=./src/assets/test.ico type=image/x-icon><script src=https://cdn.bootcss.com/highcharts/6.0.3/highcharts.js></script><script src=https://cdn.bootcss.com/highcharts/6.0.3/js/modules/wordcloud.js></script><style type=text/css>.iconfont {
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Spark'house</title><link rel=stylesheet href=//at.alicdn.com/t/font_470643_dwolh54z36ktvs4i.css><link rel="shortcut icon" href=http://ozgnrqjtt.bkt.clouddn.com/spark.png type=image/x-icon><script src=https://cdn.bootcss.com/highcharts/6.0.3/highcharts.js></script><script src=https://cdn.bootcss.com/highcharts/6.0.3/js/modules/wordcloud.js></script><style type=text/css>.iconfont {
       font-size: 50px;
     }
 
